--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,14 @@
     <url>http://www.tacitknowledge.com</url>
   </organization>
 
+  <licenses>
+    <license>
+      <name>Apache 2</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
+
   <developers>
     <developer>
         <id>scottfromsf</id>
