--- a/pom.xml
+++ b/pom.xml
@@ -1,17 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.tacitknowledge.autopatch</groupId>
-  <artifactId>tk-autopatch-optional-spring</artifactId>
-  <version>1.1.0</version>
+  <groupId>com.tacitknowledge</groupId>
+  <artifactId>autopatch-spring</artifactId>
+  <version>1.1.0-SNAPSHOT</version>
+  
+  <parent>
+    <groupId>com.tacitknowledge</groupId>
+    <artifactId>oss-parent</artifactId>
+    <version>1</version>
+  </parent>
 
   <name>AutoPatch Spring</name>
-  <description>An automated Java patching system - Spring module</description>
+  <description>Spring binding for AutoPatch</description>
   <url>https://github.com/tacitknowledge/autopatch-spring</url>
 
   <organization>
     <name>Tacit Knowledge</name>
-    <url>http://www.tacitknowledge.com</url>
+    <url>http://www.tacitknowledge.com/</url>
   </organization>
 
   <licenses>
@@ -21,6 +27,17 @@
       <distribution>repo</distribution>
     </license>
   </licenses>
+
+  <issueManagement>
+    <system>Github Issue Tracker</system>
+    <url>https://github.com/tacitknowledge/autopatch-spring/issues</url>
+  </issueManagement>
+
+  <scm>
+    <connection>scm:git:https://github.com/tacitknowledge/autopatch-spring.git</connection>
+    <developerConnection>scm:git:git@github.com:tacitknowledge/autopatch-spring.git</developerConnection>
+    <url>https://github.com/tacitknowledge/autopatch-spring</url>
+  </scm>
 
   <developers>
     <developer>
@@ -37,45 +54,11 @@
     </developer>
   </developers>
 
-  <!-- TODO: Remove the remote repository reference once AutoPatch is in the Apache Common repo -->
-  <repositories>
-    <repository>
-    <id>tk-public</id>
-    <name>TK Public Repository</name>
-    <url>http://repo1.tacitknowledge.com/repository/public</url>
-    <layout>default</layout>
-    <snapshots>
-      <enabled>false</enabled>
-    </snapshots>
-    <releases>
-      <enabled>true</enabled>
-    </releases>
-    </repository>
-  </repositories>
-
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-source-plugin</artifactId>
-        <version>2.1.2</version>
-        <executions>
-          <execution>
-            <id>attach-sources</id>
-            <goals>
-              <goal>jar</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-    </plugins>
-  </build>
-
   <dependencies>
     <dependency>
-      <groupId>com.tacitknowledge.autopatch</groupId>
-      <artifactId>tk-autopatch</artifactId>
-      <version>[1.1,)</version>
+      <groupId>com.tacitknowledge</groupId>
+      <artifactId>autopatch</artifactId>
+      <version>[1.2,)</version>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
