--- a/pom.xml
+++ b/pom.xml
@@ -63,7 +63,7 @@
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring</artifactId>
-      <version>1.1.2</version>
+      <version>[2,)</version>
     </dependency>
   </dependencies>
 
