--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.tacitknowledge</groupId>
   <artifactId>autopatch-spring</artifactId>
-  <version>1.4.0</version>
+  <version>1.4.1-SNAPSHOT</version>
   
   <parent>
     <groupId>com.tacitknowledge</groupId>
